--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script type="text/javascript">
 var db=openDatabase("itemDB","1.0","itemDB",65535);
 $(function(){
-
+loadData();
 //creates the table linked to database 
 $("#create").click(function() {
     db.transaction(function(transaction) {
